# anansi

./: .gitignore  CMakeLists.txt  README.md
include/: mem.h  string.h
src/: main.c  mem.c  mem.h  string.c  string.h  sys.h  windows_specific.c  windows_specific.h  zlib_demo_main.c
